Fix concurrency issues
Results were unstable with normal lists and maps.