@@ -19,11 +19,10 @@ import org.slf4j.LoggerFactory;
 
 import java.lang.invoke.MethodHandles;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.stream.Collectors;
 
 /**
@@ -31,6 +30,7 @@ import java.util.stream.Collectors;
  */
 public class TransformationSystem implements GameSystem {
     private static final Logger LOGGER = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+    private static final ConcurrentLinkedDeque<TransformationComponent> EMPTY_CLD = new ConcurrentLinkedDeque<>();
 
     private final ComponentManager componentManager;
     private final EventBus eventBus;
@@ -91,7 +91,7 @@ public class TransformationSystem implements GameSystem {
     }
 
     private void refreshGrid() {
-        Map<Point, List<TransformationComponent>> gridMap = grid.getGridMap();
+        Map<Point, ConcurrentLinkedDeque<TransformationComponent>> gridMap = grid.getGridMap();
 
         gridMap.clear();
         componentManager.findAllByClass(TransformationComponent.class)
@@ -99,10 +99,10 @@ public class TransformationSystem implements GameSystem {
                         .forEach(c -> putOnGrid(gridMap, c.getStagePoint(), c));
     }
 
-    private void putOnGrid(Map<Point, List<TransformationComponent>> gridMap,
+    private void putOnGrid(Map<Point, ConcurrentLinkedDeque<TransformationComponent>> gridMap,
                            Point point,
                            TransformationComponent component) {
-        gridMap.computeIfAbsent(point, c -> new LinkedList<>()).add(component);
+        gridMap.computeIfAbsent(point, c -> new ConcurrentLinkedDeque<>()).add(component);
     }
 
     private Orientation rotate(Orientation orientation, Movement movement) {
@@ -147,14 +147,14 @@ public class TransformationSystem implements GameSystem {
 
     // Check if two entities move toward each other and swap their positions
     private boolean hasHeadCollision(Point currentPoint, Orientation orientation) {
-        List<TransformationComponent> otherComponents
-                = grid.getGridMap().getOrDefault(currentPoint, Collections.emptyList());
+        ConcurrentLinkedDeque<TransformationComponent> otherComponents
+                = grid.getGridMap().getOrDefault(currentPoint, EMPTY_CLD);
 
         if (otherComponents.isEmpty()) {
             return false;
         }
 
-        TransformationComponent otherComponent = otherComponents.get(0);
+        TransformationComponent otherComponent = otherComponents.getFirst();
         Orientation otherOrientation = otherComponent.getOrientation();
 
         switch (orientation) {
@@ -172,7 +172,7 @@ public class TransformationSystem implements GameSystem {
     }
 
     private void resolveCollisions() {
-        List<Map.Entry<Point, List<TransformationComponent>>> collisions
+        List<Map.Entry<Point, ConcurrentLinkedDeque<TransformationComponent>>> collisions
                 = grid.getGridMap()
                       .entrySet()
                       .parallelStream()
@@ -184,34 +184,34 @@ public class TransformationSystem implements GameSystem {
         }
     }
 
-    private boolean hasCollision(Map.Entry<Point, List<TransformationComponent>> e) {
+    private boolean hasCollision(Map.Entry<Point, ConcurrentLinkedDeque<TransformationComponent>> e) {
         return moreThanTwoComponentsAtPoint(e) || hasHeadCollision(e);
     }
 
-    private boolean moreThanTwoComponentsAtPoint(Map.Entry<Point, List<TransformationComponent>> e) {
+    private boolean moreThanTwoComponentsAtPoint(Map.Entry<Point, ConcurrentLinkedDeque<TransformationComponent>> e) {
         return e.getValue().size() > 1;
     }
 
-    private boolean hasHeadCollision(Map.Entry<Point, List<TransformationComponent>> e) {
+    private boolean hasHeadCollision(Map.Entry<Point, ConcurrentLinkedDeque<TransformationComponent>> e) {
         if (e.getValue().size() != 1) {
             return false;
         }
 
-        TransformationComponent component = e.getValue().get(0);
+        TransformationComponent component = e.getValue().getFirst();
         return hasHeadCollision(component.getCurrentPoint(), component.getOrientation());
     }
 
-    private void resolveCollisions(List<TransformationComponent> components) {
+    private void resolveCollisions(ConcurrentLinkedDeque<TransformationComponent> components) {
         if (components.size() == 0) {
             return;
         } else if (components.size() == 1) {
-            TransformationComponent component = components.get(0);
+            TransformationComponent component = components.getFirst();
 
             if (!hasHeadCollision(component.getCurrentPoint(), component.getOrientation())) {
                 return;
             }
 
-            List<TransformationComponent> otherComponents = revertTranslation(component);
+            ConcurrentLinkedDeque<TransformationComponent> otherComponents = revertTranslation(component);
 
             if (otherComponents.isEmpty()) {
                 return;
@@ -222,7 +222,7 @@ public class TransformationSystem implements GameSystem {
 
         for (Iterator<TransformationComponent> iterator = components.iterator(); iterator.hasNext(); ) {
             TransformationComponent component = iterator.next();
-            List<TransformationComponent> otherComponents = revertTranslation(component);
+            ConcurrentLinkedDeque<TransformationComponent> otherComponents = revertTranslation(component);
 
             iterator.remove();
 
@@ -235,17 +235,17 @@ public class TransformationSystem implements GameSystem {
     }
 
     // returns list of components affected by reversion
-    private List<TransformationComponent> revertTranslation(TransformationComponent component) {
+    private ConcurrentLinkedDeque<TransformationComponent> revertTranslation(TransformationComponent component) {
         if (!component.isTranslated()) {
-            return Collections.emptyList();
+            return EMPTY_CLD;
         }
 
         Point currentPoint = component.getCurrentPoint();
 
         component.setStagePoint(currentPoint);
 
-        List<TransformationComponent> otherComponents
-                = grid.getGridMap().computeIfAbsent(currentPoint, c -> new LinkedList<>());
+        ConcurrentLinkedDeque<TransformationComponent> otherComponents
+                = grid.getGridMap().computeIfAbsent(currentPoint, c -> new ConcurrentLinkedDeque<>());
 
         otherComponents.add(component);
         return otherComponents;
